# rust-programming-introduction

./: .gitignore  Cargo.toml
chapter1-3/: Cargo.toml
chapter1-3/src/: main.rs
chapter4/samplecli/: Cargo.toml  number.txt
chapter4/samplecli/src/: main.rs
chapter5/todo/: Cargo.toml  Dockerfile
chapter5/todo/src/: main.rs
chapter5/todo/templates/: index.html
chapter6/mandelbrot/: Cargo.toml  LICENSE_MIT
chapter6/mandelbrot/src/: lib.rs  logic.rs
chapter6/numberplace/: Cargo.toml
chapter6/numberplace/src/: lib.rs
chapter7/ui_demo/: Cargo.toml
chapter7/ui_demo/src/: main.rs
src/: main.rs  module_a.rs
