[package]
name = "rust-programming-introduction"
version = "0.1.0"
authors = ["jarinosuke(Naoki ISHIKAWA) <naokiishikawa0808@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
futures = "0.3.8"
tokio = { version = "0.2.21", features = ["macros"] }
